       meshes where the connection endpoint differs from the intended
       server name.  Without this option, the hostname from the connection
       string is used for SNI, as before.
   - Userspace datapath:
     * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
       connections, instead of limiting these commands to IPv6 only.
   - DPDK:
     * Add support for DPDK 25.11.
   - OVSDB-IDL:
     * New ovsdb_idl_txn_assert_read_only() interface to mark transactions
       as read-only and trigger assertion failure when application attempts
       to modify the database data through this transaction.
   - ovs-appctl:
     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
       a specific table or all routes from all tables.
     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
       add/delete a route from a specific table.
     * 'ovs/route/lookup': added new option, src=IP, to perform lookup with
       a specific source IP address.
     * Added a new sub-command, ovs/route/rule/show, to list OVS routing rules.
   - Windows Support
     * Support for compiling for and running on Windows has been deprecated.
   - Deprecation of support for running OVS user-space with OOT kernel module
     * The OOT kernel module refers to the kernel module that was
       previously distributed as part of OVS - out of tree (OOT) from the
       perspective of the upstream Kernel tree.
     * The OOT kernel module: was deprecated in v2.15; was last present in
       the v2.17 release; and is no longer present in any supported release
       since v2.17 went EOL when v3.5 was released.
   - The following AVX512-specific features are now deprecated:
     * AVX512-optimized DPCLS lookups.
     * AVX512-optimized action handling.
     * AVX512-optimized miniflow extraction.
     * AVX512-optimized DPIF input processing.


v3.6.0 - 18 Aug 2025
--------------------
   - Bonding: