@@ -345,13 +345,13 @@ AT_CHECK([ip link set p1-route up])
 
 dnl Check there are no non-standard rules cached in OVS.
 AT_CHECK([ovs-appctl ovs/route/rule/show], [0], [dnl
-0: from all lookup local
-32766: from all lookup main
-32767: from all lookup default
+Cached: 0: from all lookup local
+Cached: 32766: from all lookup main
+Cached: 32767: from all lookup default
 ])
 AT_CHECK([ovs-appctl ovs/route/rule/show -6], [0], [dnl
-0: from all lookup local
-32766: from all lookup main
+Cached: 0: from all lookup local
+Cached: 32766: from all lookup main
 ])
 
 dnl Add unsupported rules to kernel.
@@ -374,13 +374,13 @@ dnl Give the main thread a chance to act.
 AT_CHECK([ovs-appctl revalidator/wait])
 dnl Check OVS rules cache hasn't changed.
 AT_CHECK([ovs-appctl ovs/route/rule/show], [0], [dnl
-0: from all lookup local
-32766: from all lookup main
-32767: from all lookup default
+Cached: 0: from all lookup local
+Cached: 32766: from all lookup main
+Cached: 32767: from all lookup default
 ])
 AT_CHECK([ovs-appctl ovs/route/rule/show -6], [0], [dnl
-0: from all lookup local
-32766: from all lookup main
+Cached: 0: from all lookup local
+Cached: 32766: from all lookup main
 ])
 
 OVS_TRAFFIC_VSWITCHD_STOP
